--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.1.3",
+    "@prisma/client": "^6.5.0",
     "astro": "^5.5.2"
+  },
+  "devDependencies": {
+    "prisma": "^6.5.0"
   }
 }
